# pyinfra-okd4

./: .gitignore  MANIFEST.in  README.md  configure_okdutil.py  setup.cfg  setup.py
example/: deploy.py  inventory.py
files/: nginx.conf
group_data/: all.py.example
pyinfra_okd4/: __init__.py  okd4.py  old_format_okd4.py  provisioner.py
pyinfra_okd4/templates/: haproxy.cfg.j2  okd4_dns.records.j2
pyinfra_okd4/templates/pxelinux.cfg/: default.j2
templates/: install-config.yaml.j2
