[metadata]
name = pyinfra_okd4
version = 0.1
description = A set of pyinfra deploys to configure an OKD4 Provisioning Server
long_description = file: README.md
author = Chris Row
author_email = memblin@discursive.org
url = https://github.com/memblin/pyinfra-okd4

[options]
include_package_data = True
packages = find:
install_requires = 
    pyinfra
    requests

[options.package_data]
pyinfra_okd4 = 
    files/*
    templates/*

